<resources>
    <string name="app_name">WeTalk</string>
    <string name="password">password</string>
    <string name="new_password">new password</string>
    <string name="current_password">current password</string>
    <string name="update">update</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="have_an_account">Already have an account?\n click here to <b><u>Log In</u></b></string>
    <string name="create_new_account">Create new account</string>
    <string name="password_error_msg">Password should be at least 6 characters</string>
    <string name="wrong_email_format">Invalid Email Format</string>
    <string name="Empty_field_msg">empty field</string>
    <string name="default_Error_msg">something went wrong please try again later</string>
    <string name="logIn_Error_msg">Invalid Email/Password</string>
    <string name="upload_profile_image_hint">click to upload profile image</string>
    <string name="logo_image_description">app logo</string>
    <string name="profile_image_description">profile image</string>
    <string name="search">Search by email</string>
    <string name="save">save</string>

    <!-- Firebase RealTime Keys-->
    <string name="User_KEY">user</string>
    <string name="email">email</string>
    <string name="name">name</string>

    <!--User-->
    <string name="Friends_KEY">Friends</string>
    <string name="profile_IMG">profile</string>

    <!--Messages-->
    <string name="Messages_KEY">Messages</string>
    <string name="message">message</string>
    <string name="sender">senderKey</string>
    <string name="timeStamp">timeStamp</string>

    <!--Friend-->
    <string name="friendState">friendState</string>
    <string name="sessionID">sessionID</string>
    <string name="new_message">new_message</string>

    <!--Friends State-->
    <string name="friend">friend</string>
    <string name="removed_Friend">removed</string>
    <string name="pendingRequest">pending</string>
    <string name="RequestSent">sent</string>

    <string name="MSG_isFriend">Already a Friend</string>
    <string name="MSG_pendingRequest">Pending Request</string>
    <string name="MSG_Request_Sent">Request Sent</string>
    <string name="MSG_NoUseR">no user found with this email</string>

    <string name="type_message">Type a message</string>
    <string name="token">Token</string>
    <!--Notification Message-->
    <string name="Notify_FRIEND_REQUEST_msg">sent you friend request</string>
    <string name="Notify_FRIEND_REQUEST_Title">Friend Request</string>

    <!-- menu -->
    <string name="menu_Setting">Setting</string>
    <string name="menu_LogOut">logout</string>
    <string name="permission_denied">permission denied. cannot do the required action</string>

<string name="image_uploading_success">image uploaded successfully</string>
<string name="image_uploading_fail">an error occurred while uploading image please try again</string>

</resources>
