<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar_container"
        android:layout_height="wrap_content"
        android:background="?colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:theme="@style/ToolbarTheme"
            app:contentInsetStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="bottom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back"
                    android:scaleType="fitXY"
                    android:layout_margin="@dimen/low_margin_padding"
                    android:id="@+id/setting_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                    android:layout_width="0dp"
                    app:layout_constraintStart_toEndOf="@id/setting_back"
                    app:layout_constraintTop_toTopOf="@id/setting_back"
                    app:layout_constraintBottom_toBottomOf="@id/setting_back"
                    android:gravity="start"
                    android:layout_margin="@dimen/low_margin_padding"
                    style="@style/AppTheme"
                    android:id="@+id/txt_app_bar"
                    android:text="@string/menu_Setting"
                    android:textSize="@dimen/actionBarTxt"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:padding="@dimen/average_margin_padding"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="100dp"
            android:layout_margin="@dimen/high_margin_padding"
            android:background="@drawable/image_frame"
            android:layout_height="100dp"
            android:src="@drawable/avatar"
            android:id="@+id/setting_img"/>

        <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            tools:ignore="MissingConstraints"
            android:layout_marginTop="@dimen/average_margin_padding"
            style="@style/text_input_layout"
            android:id="@+id/setting_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_input"
                android:id="@+id/setting_name_txt"
                android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_input_layout"
            tools:ignore="MissingConstraints"
            android:id="@+id/setting_email_layout"
    >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_input"
                android:id="@+id/setting_email_txt"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:hint="@string/save"
            style="@style/button"
            android:padding="@dimen/average_margin_padding"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/high_margin_padding"
            app:cardUseCompatPadding="true"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_input_layout"
            tools:ignore="MissingConstraints"
            android:id="@+id/setting_old_password_txt_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_input"
                android:id="@+id/setting_old_password_txt"
                android:inputType="textPassword"
                android:hint="@string/current_password" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_input_layout"
            tools:ignore="MissingConstraints"
             android:id="@+id/setting_new_password_txt_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/text_input"
                android:id="@+id/setting_new_password_txt"
                android:inputType="textPassword"
                android:hint="@string/new_password" />
        </com.google.android.material.textfield.TextInputLayout>
                <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update_password"
            android:hint="@string/update"
            style="@style/button"
            android:padding="@dimen/average_margin_padding"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </ScrollView>

</LinearLayout>